# QuantumAlgorithm

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
docs/: .pages  about.md  api.md  development.md  index.md  start.md
docs/algorithms/: .pages  qda.md
docs/api/: .pages  qda.md  utils.md
docs/tutorial/: lesson_1_basic_gates.md
docs/tutorials/: .pages  lesson_1_basic_gates.md  lesson_2_controlled_gates.md  lesson_3_system_reset.md  lesson_4_quantum_arithmetic.md  lesson_5_quantum_fourier_transform.md
qalgo/: qda.py  utils.py
qalgo/qda/: __init__.py  fundamental.py  qram.py
tests/: test_qda.py
tutorials/: lesson_1_basic_gates.py  lesson_2_controlled_gates.py  lesson_3_system_reset.py  lesson_4_quantum_arithmetics.py  lesson_5_quantum_Fourier_transform.py  lesson_7_split_state.py  lesson_8_split_register.py
